# job-agent

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose-infra.yml  docker-compose.yml
.agent-harness/: README.md  browser-validation.md  flyway-baseline.sha256
agent-backend/: .dockerignore  Dockerfile  README.md  pom.xml  settings.docker.xml
agent-eval/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
agent-eval/app/: __init__.py  api.py  grader.py  judge.py
agent-eval/cases/: engine-eval-v1.yaml  job.yaml  observability-v1.yaml  observability.yaml
agent-eval/scripts/: run_engine_eval.py  start.sh
agent-eval/tests/: test_engine_eval_runner.py  test_grader.py  test_grader_boundaries.py  test_grader_observability.py  test_judge.py
agent-frontend/: .dockerignore  README.md  (+9 more)
agent-memory/: Dockerfile  README.md  pyproject.toml  server.py
agent-memory/app/: api.py  embedding.py  env.py  internal_auth.py  relevance.py  store.py  tencentdb_adapter.py
agent-memory/scripts/: start.sh
agent-memory/tests/: test_memory_api.py  test_relevance.py  test_store.py
agent-sandbox/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
agent-sandbox/app/: __init__.py  internal_auth.py
agent-sandbox/app/core/: __init__.py  config.py  exceptions.py  models.py  policies.py  runtime.py
agent-sandbox/app/sdk/: __init__.py  client.py
agent-sandbox/app/server/: __init__.py  app.py  schemas.py
agent-sandbox/scripts/: start.sh
agent-sandbox/tests/: conftest.py  test_client.py  test_internal_auth.py  test_runtime_general.py  test_server.py
agent-tool/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
agent-tool/app/: __init__.py  models.py  registry.py  server.py
agent-tool/app/tools/: __init__.py  memory_search.py  sandbox_execute.py  trace_summarize.py
agent-tool/app/tools/boss_browser/: __init__.py  tool.py
agent-tool/app/tools/boss_browser/config/: config.yaml
agent-tool/app/tools/boss_browser/core/: boss_cli_engine.py  extract.py  headless_cookie_completer.py  qr_session_codec.py  rate_limiter.py  response.py  service.py  settings.py
agent-tool/scripts/: start.sh
agent-tool/tests/: test_boss_auth_degraded.py  test_boss_backstop_auth_recovery.py  test_boss_browser_tool.py  test_boss_cli_engine.py  test_boss_extract.py  test_boss_rate_limiter.py  test_boss_tenant_isolation.py  test_boss_tool_event_loop.py  test_headless_cookie_completer.py  test_tools.py
(+882 files in other folders)
