[project]
name = "agent-eval"
version = "0.2.0"
description = "Evaluation MVP for Job Agent"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0", "pydantic>=2.5.0", "httpx>=0.25.0", "loguru>=0.7.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
