[project]
name = "job-buddy-sandbox"
version = "0.1.0"
description = "Service-mode Python wrapper for Anthropic Sandbox Runtime with generic command and code execution"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Job Buddy" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
