[project]
name = "agent-tool"
version = "0.1.0"
description = "Tool registry MVP for Job Buddy"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.1",
    "qrcode[pil]>=7.4.2",
    "kabi-boss-cli>=0.3.6",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
